<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:text="Профиль"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/avatarImageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/img" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prifil_nikname"
                android:textSize="24dp"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prifil_city"
                android:textSize="12dp"
                android:textColor="@color/black"
                android:paddingStart="0dp"
                android:padding="10dp"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Описание"
                android:textSize="12dp"
                android:paddingTop="10dp"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/changePhotoButton"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/oval_background"
                android:gravity="center"
                android:padding="0dp"
                android:text="Редактировать профиль"
                android:textColor="@color/black"
                android:textSize="10.sp" />

            <Button
                android:id="@+id/changeexatButton"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="@drawable/oval_background"
                android:text="Выйти из профиля"
                android:textColor="@color/black"
                android:textSize="10dp"
                android:padding="0dp"
                android:layout_margin="0dp"
                android:layout_gravity="bottom"
                android:gravity="center"


                />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profil_route"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profil_path"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:text="@string/prifil_points"
                android:textColor="@color/black"
                android:textSize="14dp" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:layout_gravity="bottom"
            android:background="@drawable/oval_background"
            android:gravity="center"
            android:text="Топ пользователей по рейтингу"
            android:textColor="@color/black"
            android:textSize="10dp" />
    </LinearLayout>




    <LinearLayout
        android:layout_width="274dp"
        android:layout_height="81dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/gallery"
            android:layout_width="114dp"
            android:layout_height="81dp"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/img_1" />

        <ImageView
            android:id="@+id/gallery1"
            android:layout_width="143dp"
            android:layout_height="82dp"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:scaleType="fitXY"
            android:src="@drawable/img_2" />
    </LinearLayout>

    <ImageView
        android:id="@+id/gallery2"
        android:layout_width="205dp"
        android:layout_height="141dp"
        android:layout_marginEnd="16dp"
        android:scaleType="fitXY"
        android:src="@drawable/img_3"
        android:padding="10dp"/>


</LinearLayout>
